crates/test-files/fixtures/compile_errors/external_call_wrong_number_of_params.fe
use std::context::Context

contract Foo {
    pub fn bar(a: u256, b: u256) {}
}

contract FooProxy {
    pub fn baz() {
        Foo(address(0)).bar(42)
    }
}
